# NHS_Business_Intelligence_Platform_Modelled-Need

./: .gitignore  Dockerfile  Dockerfile.lambda  ModelledNeedsAPI.R  README.md  RunModelledNeeds.R  pyproject.toml
modelled_needs/: index.py  index.test.py
modelled_needs/lib/: model.py
modelled_needs/lib/helpers/: aws.py
modelled_needs/lib/lookup/: compare_model_output.py  format_glm_data.py  get_area.py  get_predictor.py  get_response.py
sql/: GetCostDistribution.sql  GetPatientData.sql
user_defined_functions/: AddCohortFlag.R  CalculateConfidenceIntervals.R  CompareCostModelOutput.R  CompareModelOutput.R  CreateCohortFlag.R  DatabaseConnector.R  FormatGLMData.R  FormatSearchString.R  GetAreaLookup.R  GetCohortDimensions.R  GetCostMonteCarlo.R  GetCountModelDiagnostics.R  GetDeprivation.R  GetDistribution.R  GetLogisticModelDiagnostics.R  GetPredictorLookup.R  GetResponseLookup.R
