[project]
name = "modelled-needs"
version = "0.1.0"
description = ""
authors = [
    {name = "Luke's Tinnion",email = "103183269+luket-nhs@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "statsmodels (>=0.14.5,<0.15.0)",
    "boto3 (>=1.40.13,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]
packages = [{include = "modelled_needs", from = ""}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
